--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Jiyeon31/superEasyScheduler#readme",
   "dependencies": {
+    "jquery": "^3.6.0",
     "moment": "^2.29.1"
   }
 }
